--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -227,6 +227,7 @@
                         app:srcCompat="@drawable/person" />
 
                     <TextView
+                        android:id="@+id/people"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
