--- a/app/src/main/res/layout/fragment_all_tickets.xml
+++ b/app/src/main/res/layout/fragment_all_tickets.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".fragments.TicketsFragment">
+    tools:context=".presentation.ui.fragments.TicketsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,6 +34,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:text="TextView"
+                    android:textColor="@color/gray2"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toEndOf="@+id/im_back"
@@ -45,6 +46,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="32dp"
                     android:text="TextView"
+                    android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
