--- a/app/src/main/res/layout/fragment_tickets.xml
+++ b/app/src/main/res/layout/fragment_tickets.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="10dp"
-    tools:context=".fragments.TicketsFragment">
+    tools:context=".presentation.ui.fragments.TicketsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
