--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -372,21 +372,20 @@
             android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
-                android:layout_width="400dp"
-                android:layout_height="300dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="10dp"
                 android:foregroundGravity="center"
-                app:cardBackgroundColor="@color/litle_gray"
+                app:cardBackgroundColor="@color/black"
                 app:cardCornerRadius="8dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    >
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/textView11"
@@ -402,42 +401,41 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center">
+                        android:gravity="center"
+                        android:orientation="horizontal">
 
                         <LinearLayout
                             android:layout_width="50dp"
                             android:layout_height="match_parent"
-                            android:orientation="vertical"
-                            android:gravity="center">
+                            android:gravity="center"
+                            android:orientation="vertical">
 
                             <ImageView
-                                android:paddingTop="20dp"
                                 android:id="@+id/imageView5"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:paddingTop="0dp"
                                 android:src="@drawable/red_circle" />
 
                             <ImageView
-                                android:paddingTop="20dp"
                                 android:id="@+id/imageView6"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:paddingTop="20dp"
                                 android:src="@drawable/blue_circle" />
 
                             <ImageView
-                                android:paddingTop="20dp"
                                 android:id="@+id/imageView7"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:paddingTop="20dp"
                                 android:src="@drawable/white_cercle" />
                         </LinearLayout>
 
                         <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recycler_view"
                             android:layout_width="match_parent"
-                            android:layout_height="200dp"
-                            android:id="@+id/recycler_view"/>
-
+                            android:layout_height="match_parent" />
 
 
                     </LinearLayout>
@@ -449,6 +447,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:layout_marginEnd="10dp"
+                        android:backgroundTint="@color/black"
                         android:text="Показать все"
                         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                         android:textColor="@android:color/holo_blue_dark"
