--- a/app/src/main/res/layout/right_flights_item.xml
+++ b/app/src/main/res/layout/right_flights_item.xml
@@ -7,7 +7,7 @@
     android:background="@color/black">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
@@ -15,7 +15,6 @@
         android:background="@color/black"
         app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
@@ -27,33 +26,34 @@
             android:orientation="vertical"
             android:paddingBottom="5dp">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="@color/black"
-                android:orientation="horizontal"
-                android:gravity="center_vertical">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/black">
 
                 <TextView
                     android:id="@+id/tvTitle"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@color/black"
                     android:text="TextView"
                     android:textColor="@color/white"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    android:layout_weight="0"/>
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true" />
 
                 <TextView
                     android:id="@+id/tvPriceFlights"
-                    android:layout_marginStart="250dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="5dp"
                     android:text="от 224500 ₽"
                     android:textColor="@android:color/holo_blue_dark" />
-            </LinearLayout>
+
+            </RelativeLayout>
+
 
             <TextView
                 android:id="@+id/tvTime"
@@ -64,5 +64,6 @@
                 android:textColor="@color/white" />
 
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
