--- a/app/src/main/res/layout/all_tikets_item.xml
+++ b/app/src/main/res/layout/all_tikets_item.xml
@@ -59,7 +59,7 @@
                 app:layout_constraintTop_toTopOf="@+id/valueTextView" />
 
             <TextView
-                android:id="@+id/textView17"
+                android:id="@+id/town"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -78,7 +78,7 @@
                 android:text="TextView"
                 android:textColor="@color/white"
                 app:layout_constraintStart_toEndOf="@+id/valueTextView"
-                app:layout_constraintTop_toTopOf="@+id/textView17" />
+                app:layout_constraintTop_toTopOf="@+id/town" />
 
             <ImageView
                 android:id="@+id/imageView8"
@@ -103,7 +103,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
-                    android:id="@+id/textView12"
+                    android:id="@+id/badge"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
