--- a/app/src/main/res/layout/all_tikets_item.xml
+++ b/app/src/main/res/layout/all_tikets_item.xml
@@ -115,6 +115,17 @@
                     android:textSize="12sp" />
             </FrameLayout>
 
+            <TextView
+                android:id="@+id/allfliteTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="TextView"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="@+id/valueTextView"
+                app:layout_constraintStart_toEndOf="@+id/arrivalDate"
+                app:layout_constraintTop_toTopOf="@+id/arrivalDate" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
